Finaliza carga contenido de index a excepción del apartado perfil

--- a/contactoyredes.html
+++ b/contactoyredes.html
@@ -39,40 +39,8 @@
 
     <main class="main">
         <div class="container">
-            <h2>Perfil</h2>
-            <p>
-                Lorem ipsum dolor sit amet. In voluptatem saepe sed galisum dicta quo minima quibusdam quo facere velit id velit tenetur. At consequatur voluptas ut facilis internos sed excepturi dignissimos. Ea maiores impedit et cumque dolorem ut consequatur veniam ex dolorem mollitia.
-            </p><br>
-            <h2>Habilidades</h2>
-
-            <table class="table horizontal">
-                <tr>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/5968/5968267.png" alt="HTML" class="tooltip"/><figcaption>HTML</figcaption></td>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/1199/1199124.png" alt="JavaScript"/><figcaption>JavaScript</figcaption></td>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/919/919826.png" alt="CSS"/><figcaption>CSS</figcaption></td>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/732/732220.png" alt="Excel"/><figcaption>Excel</figcaption></td>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/5968/5968350.png" alt="Python"/><figcaption>Python</figcaption></td>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/337/337953.png" alt="SQL"/><figcaption>SQL</figcaption></td>
-                </tr>
-            </table><br>
-            <table class="table vertical">
-                <tr>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/5968/5968267.png" alt="HTML" class="tooltip"/><figcaption>HTML</figcaption></td>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/1199/1199124.png" alt="JavaScript"/><figcaption>JavaScript</figcaption></td>
-                </tr>
-                <tr>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/919/919826.png" alt="CSS"/><figcaption>CSS</figcaption></td>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/732/732220.png" alt="Excel"/><figcaption>Excel</figcaption></td>
-                </tr>
-                <tr>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/5968/5968350.png" alt="Python"/><figcaption>Python</figcaption></td>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/337/337953.png" alt="SQL"/><figcaption>SQL</figcaption></td>
-                </tr>
-            </table><br>
+            <h2>Contactame Putooo</h2>
             
-            <h2>Idioma</h2>
-            <li>Ingles: Nivel B1</li>
-            <br>
         </div>
     </main>
 
