--- a/contactoyredes.html
+++ b/contactoyredes.html
@@ -7,12 +7,15 @@
     <title>proyectofinal-CV-Spesot-Adrian</title>
 
     <link rel="stylesheet" href="CSS\style.css">
+    <link rel="stylesheet" href="CSS\style-contacto.css">
 </head>
 <body>
     <header class="header-fix">
         <!--Agregamos la foto de perfil y el nombre-->
         <div class="container logo-nav-container">
-             <img src="https://randomuser.me/api/portraits/men/71.jpg" alt="Imagen de Perfil" class="logo">
+            <a href="/index.html">
+                <img src="https://randomuser.me/api/portraits/men/71.jpg" alt="Imagen de Perfil" class="logo">
+             </a>
         
         <div class="title-container">
             <h1>Franklin Marshall</h1>
@@ -27,10 +30,9 @@
             <nav class="navigation">
                 <ul id="format-ul">
                     <li><a href="/index.html">Perfil</a></li>
-                    <li><a href="/contactoyredes.html">Contacto</a></li>
+                    <li><a href="/contactoyredes.html">Contacto y Redes Sociales</a></li>
                     <li><a href="/experiencia-laboral.html">Experiencia Laboral</a></li>
                     <li><a href="/educacion.html">Educación</a></li>
-                    <li><a href="">Hobbies</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,8 +41,34 @@
 
     <main class="main">
         <div class="container">
-            <h2>Contactame Putooo</h2>
-            
+            <h2>Contacto</h2>
+            <table class="contacto">
+                <tr>
+                    <td><img src="https://cdn-icons-png.flaticon.com/128/732/732200.png" alt="email-simbol"></td>
+                    <td><a href="franklin.marshall@example.com">franklin.marshall@example.com</a></td>
+                </tr>
+                <tr>
+                    <td><img src="https://cdn-icons-png.flaticon.com/128/901/901141.png" alt="email-simbol"></td>
+                    <td>(427) 369-6377</a></td>
+                </tr>
+            </table><br>
+            <h2>Redes Sociales</h2>
+            <span>(Haga click en los íconos para dirigirse a los enlaces correspondientes)</span>
+            <table class="redes">
+                <tr>
+                    <td><a href="https://www.linkedin.com/in/adri%C3%A1n-spesot-4a155a6a/"><img src="https://cdn-icons-png.flaticon.com/128/3536/3536505.png" alt="LinkedIn"></a></td>
+                    <td><a href="https://github.com/adrianspesot?tab=repositories"><img src="https://cdn-icons-png.flaticon.com/128/2504/2504911.png" alt="GitHub"></a></td>
+                </tr>
+            </table><br>
+            <h2>Encuéntrame Aquí <img src="https://cdn-icons-png.flaticon.com/128/3148/3148295.png" alt="flechita" id="logo-flecha"></h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.8165769396687!2d-87.99075934869614!3d43.27621837903363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8804e51e9343234d%3A0x9a91588258489188!2s8069%20Washington%20Ave%2C%20Cedarburg%2C%20WI%2053012%2C%20EE.%20UU.!5e0!3m2!1ses!2sar!4v1673374365722!5m2!1ses!2sar" 
+                width="100%" 
+                height="300" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
     </main>
 
