--- a/experiencia-laboral.html
+++ b/experiencia-laboral.html
@@ -12,7 +12,9 @@
     <header class="header-fix">
         <!--Agregamos la foto de perfil y el nombre-->
         <div class="container logo-nav-container">
-             <img src="https://randomuser.me/api/portraits/men/71.jpg" alt="Imagen de Perfil" class="logo">
+            <a href="/index.html">
+                <img src="https://randomuser.me/api/portraits/men/71.jpg" alt="Imagen de Perfil" class="logo">
+             </a>
         
         <div class="title-container">
             <h1>Franklin Marshall</h1>
@@ -27,10 +29,9 @@
             <nav class="navigation">
                 <ul id="format-ul">
                     <li><a href="/index.html">Perfil</a></li>
-                    <li><a href="/contactoyredes.html">Contacto</a></li>
+                    <li><a href="/contactoyredes.html">Contacto y Redes Sociales</a></li>
                     <li><a href="/experiencia-laboral.html">Experiencia Laboral</a></li>
                     <li><a href="/educacion.html">Educación</a></li>
-                    <li><a href="">Hobbies</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,15 +40,15 @@
 
     <main class="main">
         <div class="container">
-            <h2>Titulo</h2>
+            <h2>Empresa 1</h2>
             <p>
                 Lorem ipsum dolor sit amet. In voluptatem saepe sed galisum dicta quo minima quibusdam quo facere velit id velit tenetur. At consequatur voluptas ut facilis internos sed excepturi dignissimos. Ea maiores impedit et cumque dolorem ut consequatur veniam ex dolorem mollitia.
             </p><br>
-            <h2>Titulo2</h2>
+            <h2>Empresa 2</h2>
             <p>
                 Lorem ipsum dolor sit amet. In voluptatem saepe sed galisum dicta quo minima quibusdam quo facere velit id velit tenetur. At consequatur voluptas ut facilis internos sed excepturi dignissimos. Ea maiores impedit et cumque dolorem ut consequatur veniam ex dolorem mollitia.
             </p> <br>
-            <h2>Titulo3</h2>
+            <h2>Empresa 3</h2>
             <p>
                 Lorem ipsum dolor sit amet. In voluptatem saepe sed galisum dicta quo minima quibusdam quo facere velit id velit tenetur. At consequatur voluptas ut facilis internos sed excepturi dignissimos. Ea maiores impedit et cumque dolorem ut consequatur veniam ex dolorem mollitia.
             </p> <br>
