--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header class="header-fix">
         <!--Agregamos la foto de perfil y el nombre-->
         <div class="container logo-nav-container">
-             <img src="https://randomuser.me/api/portraits/men/71.jpg" alt="Imagen de Perfil" class="logo">
+             <a href="/index.html">
+                <img src="https://randomuser.me/api/portraits/men/71.jpg" alt="Imagen de Perfil" class="logo">
+             </a>
         
         <div class="title-container">
             <h1>Franklin Marshall</h1>
@@ -27,10 +29,9 @@
             <nav class="navigation">
                 <ul id="format-ul">
                     <li><a href="/index.html">Perfil</a></li>
-                    <li><a href="/contactoyredes.html">Contacto</a></li>
+                    <li><a href="/contactoyredes.html">Contacto y Redes Sociales</a></li>
                     <li><a href="/experiencia-laboral.html">Experiencia Laboral</a></li>
                     <li><a href="/educacion.html">Educación</a></li>
-                    <li><a href="">Hobbies</a></li>
                 </ul>
             </nav>
         </div>
@@ -57,7 +58,7 @@
             </table><br>
             <table class="table vertical">
                 <tr>
-                  <td><img src="https://cdn-icons-png.flaticon.com/128/5968/5968267.png" alt="HTML" class="tooltip"/><figcaption>HTML</figcaption></td>
+                  <td><img src="https://cdn-icons-png.flaticon.com/128/5968/5968267.png" alt="HTML"/><figcaption>HTML</figcaption></td>
                   <td><img src="https://cdn-icons-png.flaticon.com/128/1199/1199124.png" alt="JavaScript"/><figcaption>JavaScript</figcaption></td>
                 </tr>
                 <tr>
