Mejoras en index.htm agregando ventana emergente con animación y pequeños cambios en experiencia-laboral.html

--- a/educacion.html
+++ b/educacion.html
@@ -47,8 +47,7 @@
                 <ul>
                     <li id = "certificado" class="icon-programs">
                         <a href="https://www.canva.com/design/DAFXSmnBLSw/ThoYj1hdf1LleLLsWyjjlg/edit?utm_content=DAFXSmnBLSw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
-                            <img src="https://cdn-icons-png.flaticon.com/128/2997/2997291.png" alt="titulo" id="titulo">
-                            <figcaption>Ver Título</figcaption>
+                            <img src="https://cdn-icons-png.flaticon.com/128/2997/2997291.png" alt="titulo" id="titulo" title="Ver Título">
                         </a><br>
                     </li>
                 </ul>
@@ -62,7 +61,7 @@
                 <ul>
                     <li id = "certificado" class="icon-programs">
                         <a href="https://www.canva.com/design/DAFXSmnBLSw/ThoYj1hdf1LleLLsWyjjlg/edit?utm_content=DAFXSmnBLSw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
-                            <img src="https://cdn-icons-png.flaticon.com/128/7238/7238706.png" alt="certificado">
+                            <img src="https://cdn-icons-png.flaticon.com/128/7238/7238706.png" alt="certificado" id="titulo" title="Ver Certficado">
                             
                         </a><br>
                         <li class="icon-programs"> Habilidades adquiridas <br>
