--- a/experiencia-laboral.html
+++ b/experiencia-laboral.html
@@ -41,14 +41,17 @@
     <main class="main">
         <div class="container">
             <h2>Empresa 1</h2>
+            <h4>Nombre del puesto de trabajo</h4>
             <p>
                 Lorem ipsum dolor sit amet. In voluptatem saepe sed galisum dicta quo minima quibusdam quo facere velit id velit tenetur. At consequatur voluptas ut facilis internos sed excepturi dignissimos. Ea maiores impedit et cumque dolorem ut consequatur veniam ex dolorem mollitia.
             </p><br>
             <h2>Empresa 2</h2>
+            <h4>Nombre del puesto de trabajo</h4>
             <p>
                 Lorem ipsum dolor sit amet. In voluptatem saepe sed galisum dicta quo minima quibusdam quo facere velit id velit tenetur. At consequatur voluptas ut facilis internos sed excepturi dignissimos. Ea maiores impedit et cumque dolorem ut consequatur veniam ex dolorem mollitia.
             </p> <br>
             <h2>Empresa 3</h2>
+            <h4>Nombre del puesto de trabajo</h4>
             <p>
                 Lorem ipsum dolor sit amet. In voluptatem saepe sed galisum dicta quo minima quibusdam quo facere velit id velit tenetur. At consequatur voluptas ut facilis internos sed excepturi dignissimos. Ea maiores impedit et cumque dolorem ut consequatur veniam ex dolorem mollitia.
             </p> <br>
