Agrego archivo Document.txt y se hacen pequeñas mejoras en estilos y páginas

--- a/contactoyredes.html
+++ b/contactoyredes.html
@@ -63,8 +63,8 @@
             <h2>Redes Sociales</h2>
             <section class="section">
                 <p class="redes">
-                    <a href="https://www.linkedin.com/in/adri%C3%A1n-spesot-4a155a6a/"><img src="https://cdn-icons-png.flaticon.com/128/3536/3536505.png" alt="LinkedIn"></a>
-                    <a href="https://github.com/adrianspesot?tab=repositories"><img src="https://cdn-icons-png.flaticon.com/128/2504/2504911.png" alt="GitHub"></a>                    </p>
+                    <a href="https://www.linkedin.com/in/adri%C3%A1n-spesot-4a155a6a/"><img src="https://cdn-icons-png.flaticon.com/128/3536/3536505.png" alt="LinkedIn" title="Ver LinkedIn"></a>
+                    <a href="https://github.com/adrianspesot?tab=repositories"><img src="https://cdn-icons-png.flaticon.com/128/2504/2504911.png" alt="GitHub" title="Ver GitHub"></a>                    
                 </p>
                 <footer>(Haga click en los íconos para dirigirse a los enlaces correspondientes)</footer>
             </section>
