--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 👋👋Hola!! Soy Franklin, desarrollador FRONT END <br><br>
                 Este el mi curriculum,te invito a conocer todas mis habilidades y experiencias.
                 <br> <br>
-                📩📩Por cualquier consuta, puedes dejarme un mensaje al final de la página.  
+                📩📩Por cualquier consulta, puedes dejarme un mensaje al final de la página.  
                 <br><br>
                 Muchas gracias por visitarme!!😃😃
             </p>
