corrección de texto bienvenida

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
             <p id="parrafo">
                 👋👋Hola!! Soy Franklin, desarrollador FRONT END <br><br>
-                Este el mi curriculum,te invito a conocer todas mis habilidades y experiencias.
+                Este es mi curriculum, te invito a conocer mis habilidades y experiencias.
                 <br> <br>
                 📩📩Por cualquier consulta, puedes dejarme un mensaje al final de la página.  
                 <br><br>
